CSS/home_page.css
* {
  box-sizing: border-box;
}

/* Textstorlek för loggan "SustainaBite" */
body {
  font: 16px Arial;
}
/* Loggans position */
h2 {
  text-align: center;
  margin-top: 100px;
  margin-bottom: 20px;
}

/* Autocomplete-funktionen */
.autocomplete {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  width: 500px;
  position: relative;
}


/* Sökfältets utseende */
input[type="search"] {
  width: 100%; 
  max-width: 500px; 
  padding: 10px 10px 10px 40px; 
  font-size: 16px;
  border: 1px solid #ccc;
  border-radius: 30px;
  background-color: #f1f1f1;
  transition: border-radius 0.3s ease;
  appearance: none;
  outline: none;
}

input[type="search"].active {
  border-radius: 30px 30px 0 0; 
}

/* Sökfältets ikon på sidan */
.search-icon {
  position: absolute; 
  top: 50%;           
  left: 15px;        
  transform: translateY(-50%); 
  font-size: 20px;    
  color: #888;       
  pointer-events: none; 
}

/*Rullistan på förslag */
.autocomplete-items {
  max-height: 260px;
  overflow-y: auto;
  position: absolute;
  border: 1px solid #d4d4d4;
  border-radius: 10px;
  background-color: #fff;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  border-bottom: none;
  border-top: none;
  z-index: 99;
  top: 100%;
  left: 0;
  right: 0;
  scrollbar-width: thin;
  scrollbar-color: #4CAF50 #f1f1f1;
}

.autocomplete-items::-webkit-scrollbar {
  width: 8px;
}

.autocomplete-items::-webkit-scrollbar-thumb {
  background-color: #4CAF50; 
  border-radius: 10px; 
}

.autocomplete-items::-webkit-scrollbar-track {
  background: #f1f1f1; 
}

.autocomplete-items div {
  padding: 10px;
  cursor: pointer;
  background-color: #fff;
  border-bottom: 1px solid #d4d4d4;
  border-bottom: 1px solid #f1f1f1;
  transition: background-color 0.3s ease;
}

.autocomplete-items div:hover {
  background-color: #C8E6C9;
}
/* Syns inte i nuläget, border blir blått när man klickar på sökfältet
.autocomplete-active {
  background-color: DodgerBlue !important;
  color: #ffffff;
}
*/

/* Resultat boxen med livsmedelsinformation */
.result {
  position: relative;
  top: 20px;
  max-width: 500px;
  padding: 10px;
  border: 1px solid #ccc;
  background-color: #f9f9f9;
  display: none;
  margin: 0 auto;
  border-radius: 15px;
  width: 100%;
  max-height: 400px; /* Maximum height for the results box */
  overflow-y: auto; /* Enable vertical scrolling if content exceeds max height */
}


body {
  margin: 0;
  padding: 0;
  overflow-x: hidden; /* Förhindrar sidscrollning */
  box-sizing: border-box;
}

/* Topbar */
.topbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px;
  background-color: #4CAF50;
  color: white;
  width: 100%;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  position: sticky;
  top: 0;
  z-index: 1000;
  box-sizing: border-box;
}

.logo {
  font-size: 24px;
  font-weight: bold;
}

.nav-links a {
  color: white;
  text-decoration: none;
  padding: 5px 10px;
  font-size: 16px;
  border-radius: 15px;
  transition: background-color 0.3s, color 0.3s;
}

.nav-links a:hover {
  background-color: white;
  color: #4CAF50;
}


html, body {
  height: 100%;
  margin: 0;
  display: flex;
  flex-direction: column;
}

.footer {
  margin-top: auto;
  text-align: center;
  padding: 20px;
  background-color: #4CAF50;
  color: white;
  font-size: 14px;
}


.addedByUserListDiv{
  position: relative;
  top: 20px;
  max-width: 500px;
  padding: 10px;
  border: 1px solid #ccc;
  background-color: #f9f9f9;
  display: none; 
  margin: 0 auto;
  border-radius: 15px;
  width: 100%;
  max-height: 400px; /* Maximum height for the results box */
  overflow-y: auto; /* Enable vertical scrolling if content exceeds max height */
}

/*Elements in the list of food items added by user: 
the class includes both the food item and its remove button. 
*/
.addedFoodItemDiv{
  height: 50px;
  position: relative;
   
}

.removeButtons {
  margin:0;
  position: absolute;
  top: 22%;
  left: 93%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.breakLines{
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  margin-bottom: 10px;
}

